Add ViralClip dashboard preview (beta)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           and publish Reels, Shorts, and TikToks from one clean dashboard.
         </p>
         <div class="hero-actions">
-          <a href="#waitlist" class="btn btn-primary">Join the beta</a>
+          <a href="/dashboard.html" class="btn btn-primary">
+            Get instant beta access
+          </a>
           <a href="#how" class="btn btn-secondary">See how it works</a>
         </div>
       </div>
