--- a/login.html
+++ b/login.html
@@ -20,6 +20,10 @@
     <a href="/signup.html">Sign up</a>
   </p>
 
-  <script type="module" src="assets/js/auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+
+  <script src="assets/js/firebase.js"></script>
+  <script src="assets/js/auth.js"></script>
 </body>
 </html>
