--- a/signup.html
+++ b/signup.html
@@ -20,6 +20,11 @@
     <a href="/login.html">Log in</a>
   </p>
 
-  <script type="module" src="assets/js/auth.js"></script>
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+
+  <script src="assets/js/firebase.js"></script>
+  <script src="assets/js/auth.js"></script>
 </body>
 </html>
