--- a/signup.html
+++ b/signup.html
@@ -10,9 +10,9 @@
   <h1>Create your ViralClip account</h1>
 
   <form id="signup-form">
-    <input type="email" name="email" placeholder="Email" required />
-    <input type="password" name="password" placeholder="Password" required />
-    <button type="submit">Create Account</button>
+    <input type="email" id="email" placeholder="Email" />
+    <input type="password" id="password" placeholder="Password" />
+    <button onclick="signup()">Create Account</button>
   </form>
 
   <p>
@@ -20,14 +20,7 @@
     <a href="/login.html">Log in</a>
   </p>
 
-  <!-- Firebase SDKs (MUST be first) -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-
-  <!-- Your Firebase init -->
-  <script src="assets/js/firebase.js"></script>
-
-  <!-- Your auth logic (LAST) -->
-  <script src="assets/js/auth.js"></script>
+  <script type="module" src="/assets/js/firebase.js"></script>
+  <script type="module" src="/assets/js/auth.js"></script>
 </body>
 </html>
