Add sign out button

--- a/dashboard.html
+++ b/dashboard.html
@@ -23,6 +23,8 @@
     <button>📊 Analytics</button>
     <button>⚙ Settings</button>
 
+    <button id="signout-btn">Sign Out</button>
+
     <div class="beta">BETA</div>
   </aside>
 
