Improve auth UX and add sign out

--- a/dashboard.html
+++ b/dashboard.html
@@ -33,6 +33,7 @@
     <div class="topbar">
       <h1>Content Calendar</h1>
       <button onclick="openModal()">+ Create Post</button>
+      <button id="logoutBtn">Sign out</button>
     </div>
 
     <div class="calendar">
