Add auth guard and sign out

--- a/dashboard.html
+++ b/dashboard.html
@@ -25,6 +25,8 @@
 
     <button id="signout-btn">Sign Out</button>
 
+    <button id="signOutBtn" style="margin-top:20px;">Sign Out</button>
+
     <div class="beta">BETA</div>
   </aside>
 
