--- a/signup.html
+++ b/signup.html
@@ -10,9 +10,9 @@
   <h1>Create your ViralClip account</h1>
 
   <form id="signup-form">
-    <input type="email" id="email" placeholder="Email" />
-    <input type="password" id="password" placeholder="Password" />
-    <button onclick="signup()">Create Account</button>
+    <input name="email" type="email" placeholder="Email" required />
+    <input name="password" type="password" placeholder="Password" required />
+    <button type="submit">Create Account</button>
   </form>
 
   <p>
