--- a/login.html
+++ b/login.html
@@ -20,14 +20,7 @@
     <a href="/signup.html">Sign up</a>
   </p>
 
-  <!-- Firebase SDKs (MUST be first) -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-
-  <!-- Your Firebase init -->
-  <script src="assets/js/firebase.js"></script>
-
-  <!-- Your auth logic (LAST) -->
-  <script src="assets/js/auth.js"></script>
+  <script type="module" src="/assets/js/firebase.js"></script>
+  <script type="module" src="/assets/js/auth.js"></script>
 </body>
 </html>
