--- a/dashboard.html
+++ b/dashboard.html
@@ -23,10 +23,6 @@
     <button>📊 Analytics</button>
     <button>⚙ Settings</button>
 
-    <button id="signout-btn">Sign Out</button>
-
-    <button id="signOutBtn" style="margin-top:20px;">Sign Out</button>
-
     <div class="beta">BETA</div>
   </aside>
 
@@ -35,7 +31,7 @@
     <div class="topbar">
       <h1>Content Calendar</h1>
       <button id="createPostBtn">+ Create Post</button>
-      <button id="logoutBtn">Sign out</button>
+      <button id="signOutBtn" class="btn-secondary">Sign out</button>
     </div>
 
     <div class="calendar">
@@ -90,6 +86,7 @@
 </div>
 
 <script type="module" src="/assets/js/modal.js"></script>
+<script type="module" src="/assets/js/main.js"></script>
 
 </body>
 </html>
