--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 
   <h1>Login to ViralClip</h1>
 
-  <form id="login-form">
+  <form id="loginForm">
     <input type="email" name="email" placeholder="Email" required />
     <input type="password" name="password" placeholder="Password" required />
     <button type="submit">Login</button>
@@ -20,7 +20,6 @@
     <a href="/signup.html">Sign up</a>
   </p>
 
-  <script type="module" src="/assets/js/firebase.js"></script>
   <script type="module" src="/assets/js/auth.js"></script>
 </body>
 </html>
