Refactor auth: remove inline redirects, use onAuthStateChanged pattern, update Firebase SDK version

--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
 
   <script type="module">
     import { auth } from "/assets/js/firebase.js";
-    import { createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
+    import { createUserWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
 
     document.getElementById("signup-form").addEventListener("submit", async (e) => {
       e.preventDefault();
@@ -31,9 +31,17 @@
 
       try {
         await createUserWithEmailAndPassword(auth, email, password);
-        window.location.href = "/dashboard.html";
       } catch (error) {
         alert("Signup failed: " + error.message);
+      }
+    });
+
+    // ✅ Redirect on successful signup
+    onAuthStateChanged(auth, (user) => {
+      const isSignupPage = location.pathname.includes("signup");
+      
+      if (user && isSignupPage) {
+        window.location.href = "/dashboard.html";
       }
     });
   </script>
