--- a/dashboard.html
+++ b/dashboard.html
@@ -9,8 +9,8 @@
 
 <body>
   <script type="module">
-    import { auth } from "/assets/js/firebase.js";
-    import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
+    import { auth } from "./firebase.js";
+    import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
     onAuthStateChanged(auth, (user) => {
       if (!user) {
