--- a/login.html
+++ b/login.html
@@ -10,8 +10,8 @@
   <h1>Login to ViralClip</h1>
 
   <form id="loginForm">
-    <input type="email" name="email" placeholder="Email" required />
-    <input type="password" name="password" placeholder="Password" required />
+    <input id="email" type="email" name="email" placeholder="Email" required />
+    <input id="password" type="password" name="password" placeholder="Password" required />
     <button type="submit">Login</button>
   </form>
 
