--- a/login.html
+++ b/login.html
@@ -3,12 +3,7 @@
 <head>
   <title>Login – ViralClip</title>
 
-  <!-- Firebase v9 COMPAT -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-
-  <script src="assets/js/firebase.js"></script>
+  
 </head>
 
 <body>
@@ -20,6 +15,21 @@
 
   <p>Don't have an account? <a href="/signup.html">Sign up</a></p>
 
-  <script src="assets/js/login.js"></script>
+  <script src="firebase.js"></script>
+
+  <script>
+    function login() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+
+      auth.signInWithEmailAndPassword(email, password)
+        .then(() => {
+          window.location.href = "dashboard.html";
+        })
+        .catch(err => {
+          alert(err.message);
+        });
+    }
+  </script>
 </body>
 </html>
