--- a/dashboard.html
+++ b/dashboard.html
@@ -48,15 +48,15 @@
   <div id="modal" class="modal hidden">
     <div class="modal-content">
       <h2>Create Post</h2>
-      <input placeholder="Post title" />
-      <textarea placeholder="Caption"></textarea>
-      <button class="primary">Save (UI only)</button>
+      <input id="postTitle" placeholder="Post title" />
+      <textarea id="postCaption" placeholder="Caption"></textarea>
+      <button class="primary" onclick="createPost()">Save</button>
       <button onclick="closeModal()">Cancel</button>
     </div>
   </div>
 
-  <script src="/firebase.js"></script>
-  <script src="/auth.js"></script>
-  <script src="/ui.js"></script>
+  <script type="module" src="/firebase.js"></script>
+  <script type="module" src="/auth.js"></script>
+  <script type="module" src="/ui.js"></script>
 </body>
 </html>
