--- a/signup.html
+++ b/signup.html
@@ -2,49 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Sign Up – ViralClip</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sign Up | ViralClip</title>
+  <link rel="stylesheet" href="/styles.css" />
+  <style>
+    body { display: grid; place-items: center; }
+    .auth-card { width: min(420px, calc(100% - 2rem)); background: #fff; border: 1px solid #e5e7eb; border-radius: 14px; padding: 1.5rem; }
+    .auth-card input { width: 100%; margin-bottom: .8rem; border: 1px solid #d1d5db; border-radius: 8px; padding: .65rem; }
+    .auth-card p { color: #6b7280; }
+  </style>
 </head>
 <body>
-
-  <h1>Create your ViralClip account</h1>
-
-  <form id="signup-form">
+  <form id="signup-form" class="auth-card">
+    <h1>Create account</h1>
+    <p>Sign up to start scheduling and managing your posts.</p>
     <input name="email" type="email" placeholder="Email" required />
     <input name="password" type="password" placeholder="Password" required />
-    <button type="submit">Create Account</button>
+    <button type="submit" class="primary-btn">Create account</button>
+    <p>Already have an account? <a href="/login.html">Log in</a></p>
   </form>
 
-  <p>
-    Already have an account?
-    <a href="/login.html">Log in</a>
-  </p>
-
-  <script type="module">
-    import { auth } from "/assets/js/firebase.js";
-    import { createUserWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
-
-    document.getElementById("signup-form").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const email = e.target.email.value;
-      const password = e.target.password.value;
-
-      try {
-        await createUserWithEmailAndPassword(auth, email, password);
-      } catch (error) {
-        alert("Signup failed: " + error.message);
-      }
-    });
-
-    // ✅ Redirect on successful signup
-    onAuthStateChanged(auth, (user) => {
-      const isSignupPage = location.pathname.includes("signup");
-      
-      if (user && isSignupPage) {
-        window.location.href = "/dashboard.html";
-      }
-    });
-  </script>
-  <script type="module" src="/assets/js/auth.js"></script>
+  <script type="module" src="/auth.js"></script>
+  <script type="module" src="/login.js"></script>
 </body>
 </html>
