Update login to Firebase v10 modular SDK

--- a/login.html
+++ b/login.html
@@ -1,39 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Login – ViralClip</title>
-
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-
-  <!-- Your Firebase config -->
-  <script src="firebase.js"></script>
 </head>
-
 <body>
   <h1>Login to ViralClip</h1>
 
-  <input id="email" placeholder="Email" />
+  <input id="email" type="email" placeholder="Email" />
   <input id="password" type="password" placeholder="Password" />
-  <button id="loginBtn" onclick="login()">Login</button>
+  <button id="loginBtn">Login</button>
 
   <p>Don't have an account? <a href="/signup.html">Sign up</a></p>
 
-  <script>
-    function login() {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-
-      auth.signInWithEmailAndPassword(email, password)
-        .then(() => {
-          window.location.href = "dashboard.html";
-        })
-        .catch(err => {
-          alert(err.message);
-        });
-    }
-  </script>
+  <!-- Firebase modules -->
+  <script type="module" src="/firebase.js"></script>
+  <script type="module" src="/login.js"></script>
 </body>
 </html>
