Remove duplicate and unused root files

--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
     <p>Don't have an account? <a href="/signup.html">Create one</a></p>
   </div>
 
-  <script type="module" src="/firebase.js"></script>
+  <script type="module" src="/auth.js"></script>
   <script type="module" src="/login.js"></script>
 </body>
 </html>
