--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ViralClip — Plan. Post. Grow at Scale</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <link rel="stylesheet" href="/css/styles.css" />
 
   <style>
+    :root {
+      --purple: #7c3aed;
+      --pink: #ec4899;
+      --orange: #f59e0b;
+      --bg: #f8f7ff;
+      --text: #0f172a;
+      --muted: #64748b;
+    }
+
+    * { box-sizing: border-box; }
+
     body {
       margin: 0;
       font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: radial-gradient(circle at top, #f5f3ff, #f8fafc 60%);
-      color: #0f172a;
+      background:
+        radial-gradient(circle at top left, #ede9fe, transparent 40%),
+        radial-gradient(circle at top right, #fce7f3, transparent 45%),
+        var(--bg);
+      color: var(--text);
+      overflow-x: hidden;
     }
 
     .container {
@@ -20,51 +36,85 @@
       padding: 2rem;
     }
 
-    /* NAVBAR */
-    .nav {
+    /* NAV */
+    header {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 1.5rem 0;
     }
 
-    .nav-left {
+    .logo {
       display: flex;
       align-items: center;
-      gap: 2rem;
-    }
-
-    .logo {
+      gap: 0.5rem;
       font-weight: 800;
       font-size: 1.25rem;
-      background: linear-gradient(90deg, #7c3aed, #a855f7);
+      background: linear-gradient(90deg, var(--purple), var(--pink));
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
 
-    .nav a {
+    nav a {
+      margin-left: 1.5rem;
       text-decoration: none;
-      color: #475569;
+      color: var(--muted);
       font-weight: 500;
     }
 
-    .nav-right {
-      display: flex;
-      gap: 1rem;
-      align-items: center;
-    }
-
-    .btn-primary {
-      background: linear-gradient(90deg, #7c3aed, #a855f7);
+    .cta {
+      background: linear-gradient(90deg, var(--purple), var(--pink));
       color: white;
-      padding: 0.6rem 1.2rem;
+      padding: 0.6rem 1.4rem;
       border-radius: 999px;
       text-decoration: none;
       font-weight: 600;
+      box-shadow: 0 15px 40px rgba(124,58,237,0.35);
+      transition: transform .3s ease, box-shadow .3s ease;
     }
 
-    .btn-secondary {
-      padding: 0.6rem 1.2rem;
+    .cta:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 20px 50px rgba(124,58,237,0.45);
+    }
+
+    /* HERO */
+    .hero {
+      position: relative;
+      display: grid;
+      grid-template-columns: 1.1fr 0.9fr;
+      gap: 4rem;
+      align-items: center;
+      padding: 5rem 0 6rem;
+    }
+
+    .hero h1 {
+      font-size: 3.4rem;
+      line-height: 1.05;
+      margin-bottom: 1rem;
+    }
+
+    .hero h1 span {
+      background: linear-gradient(90deg, var(--orange), var(--pink));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .hero p {
+      color: var(--muted);
+      font-size: 1.15rem;
+      max-width: 520px;
+      margin-bottom: 2rem;
+    }
+
+    .hero-actions {
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
+    }
+
+    .secondary {
+      padding: 0.6rem 1.4rem;
       border-radius: 999px;
       background: #e5e7eb;
       color: #111827;
@@ -72,125 +122,177 @@
       font-weight: 600;
     }
 
-    /* HERO */
-    .hero {
-      text-align: center;
-      padding: 5rem 1rem 4rem;
+    /* FLOATING ICONS */
+    .float {
+      position: absolute;
+      width: 64px;
+      height: 64px;
+      border-radius: 18px;
+      background: white;
+      display: grid;
+      place-items: center;
+      font-size: 1.8rem;
+      box-shadow: 0 25px 50px rgba(0,0,0,.18);
+      animation: float 6s ease-in-out infinite;
     }
 
-    .hero h1 {
-      font-size: 3rem;
-      line-height: 1.1;
-      margin-bottom: 1rem;
+    .f1 { top: 10%; left: -20px; animation-delay: 0s; }
+    .f2 { bottom: 20%; left: 10%; animation-delay: 1.5s; }
+    .f3 { top: 15%; right: 5%; animation-delay: 3s; }
+    .f4 { bottom: 25%; right: -25px; animation-delay: 4.5s; }
+
+    @keyframes float {
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-14px); }
+      100% { transform: translateY(0); }
     }
 
-    .hero h1 span {
-      background: linear-gradient(90deg, #f59e0b, #7c3aed);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+    /* DASHBOARD MOCK */
+    .mock {
+      background: white;
+      border-radius: 22px;
+      padding: 1.2rem;
+      box-shadow: 0 40px 80px rgba(0,0,0,.18);
+      animation: fadeUp .8s ease forwards;
     }
 
-    .hero p {
-      max-width: 700px;
-      margin: 0 auto 2rem;
-      color: #475569;
-      font-size: 1.1rem;
-    }
-
-    .hero-actions {
+    .mock-header {
       display: flex;
-      justify-content: center;
-      gap: 1rem;
-      flex-wrap: wrap;
+      gap: .4rem;
+      margin-bottom: .8rem;
+    }
+
+    .dot {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background: #e5e7eb;
+    }
+
+    .mock-body {
+      height: 240px;
+      border-radius: 14px;
+      background:
+        linear-gradient(90deg,#eef2ff 30%,#f8fafc 30%),
+        repeating-linear-gradient(
+          to bottom,
+          transparent,
+          transparent 38px,
+          rgba(0,0,0,.04) 38px,
+          rgba(0,0,0,.04) 40px
+        );
+    }
+
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     /* TRUST */
     .trust {
       text-align: center;
-      margin-top: 4rem;
-      color: #475569;
+      margin-bottom: 3rem;
+      color: var(--muted);
       font-weight: 600;
     }
 
     .platforms {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
       gap: 1rem;
       margin-top: 1.5rem;
     }
 
     .platform {
       background: white;
-      border-radius: 12px;
-      padding: 0.8rem;
+      padding: .8rem;
+      border-radius: 14px;
+      box-shadow: 0 20px 40px rgba(0,0,0,.08);
       font-weight: 600;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.05);
     }
 
     /* STATS */
     .stats {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 1.5rem;
-      margin-top: 4rem;
+      margin-bottom: 5rem;
     }
 
     .stat {
       background: white;
-      border-radius: 16px;
+      border-radius: 18px;
       padding: 2rem;
       text-align: center;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.06);
+      box-shadow: 0 30px 60px rgba(0,0,0,.1);
     }
 
     .stat h2 {
-      font-size: 2rem;
+      font-size: 2.2rem;
       margin: 0;
     }
 
     .stat p {
-      margin-top: 0.5rem;
-      color: #64748b;
-      font-weight: 500;
+      color: var(--muted);
+      margin-top: .4rem;
+    }
+
+    @media (max-width: 900px) {
+      .hero {
+        grid-template-columns: 1fr;
+        text-align: center;
+      }
+      .hero-actions {
+        justify-content: center;
+      }
     }
   </style>
 </head>
 
 <body>
   <div class="container">
-    <!-- NAV -->
-    <nav class="nav">
-      <div class="nav-left">
-        <div class="logo">ViralClip</div>
+    <header>
+      <div class="logo">ViralClip</div>
+      <nav>
         <a href="#">Features</a>
         <a href="#">Pricing</a>
         <a href="#">Resources</a>
-      </div>
-      <div class="nav-right">
         <a href="/login.html">Log in</a>
-        <a href="/signup.html" class="btn-primary">Get started for free</a>
-      </div>
-    </nav>
+        <a href="/signup.html" class="cta">Get started for free</a>
+      </nav>
+    </header>
 
-    <!-- HERO -->
     <section class="hero">
-      <h1>Plan. Post. <span>Grow at Scale</span></h1>
-      <p>
-        Your command center for Reels, TikToks & Shorts.
-        Schedule, manage, and analyze all your short-form videos
-        in one powerful dashboard.
-      </p>
+      <div class="float f1">🎵</div>
+      <div class="float f2">📸</div>
+      <div class="float f3">▶️</div>
+      <div class="float f4">📊</div>
 
-      <div class="hero-actions">
-        <a href="/signup.html" class="btn-primary">Get started for free</a>
-        <a href="#" class="btn-secondary">Watch how it works</a>
+      <div>
+        <h1>Plan. Post. <span>Grow at Scale</span></h1>
+        <p>
+          Your command center for Reels, TikToks & Shorts.
+          Schedule, manage, and analyze all your short-form videos
+          in one powerful dashboard.
+        </p>
+        <div class="hero-actions">
+          <a href="/signup.html" class="cta">Get started for free</a>
+          <a href="#" class="secondary">Watch how it works</a>
+        </div>
+      </div>
+
+      <div class="mock">
+        <div class="mock-header">
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+        </div>
+        <div class="mock-body"></div>
       </div>
     </section>
 
-    <!-- TRUST -->
-    <section class="trust">
+    <div class="trust">
       Trusted by short-form creators around the world
-
       <div class="platforms">
         <div class="platform">Instagram</div>
         <div class="platform">TikTok</div>
@@ -199,9 +301,8 @@
         <div class="platform">Pinterest</div>
         <div class="platform">Twitter / X</div>
       </div>
-    </section>
+    </div>
 
-    <!-- STATS -->
     <section class="stats">
       <div class="stat">
         <h2>191,782</h2>
@@ -213,7 +314,7 @@
       </div>
       <div class="stat">
         <h2>3,524</h2>
-        <p>Short-form platforms supported</p>
+        <p>Platforms supported</p>
       </div>
     </section>
   </div>
