--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
     body {
       margin: 0;
-      font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      font-family: Inter, system-ui, sans-serif;
       background:
         radial-gradient(circle at top left, #ede9fe, transparent 40%),
         radial-gradient(circle at top right, #fce7f3, transparent 45%),
@@ -45,9 +45,6 @@
     }
 
     .logo {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
       font-weight: 800;
       font-size: 1.25rem;
       background: linear-gradient(90deg, var(--purple), var(--pink));
@@ -70,12 +67,6 @@
       text-decoration: none;
       font-weight: 600;
       box-shadow: 0 15px 40px rgba(124,58,237,0.35);
-      transition: transform .3s ease, box-shadow .3s ease;
-    }
-
-    .cta:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 20px 50px rgba(124,58,237,0.45);
     }
 
     /* HERO */
@@ -88,19 +79,19 @@
       padding: 5rem 0 6rem;
     }
 
-    .hero h1 {
+    h1 {
       font-size: 3.4rem;
       line-height: 1.05;
       margin-bottom: 1rem;
     }
 
-    .hero h1 span {
+    h1 span {
       background: linear-gradient(90deg, var(--orange), var(--pink));
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
 
-    .hero p {
+    p {
       color: var(--muted);
       font-size: 1.15rem;
       max-width: 520px;
@@ -110,7 +101,6 @@
     .hero-actions {
       display: flex;
       gap: 1rem;
-      flex-wrap: wrap;
     }
 
     .secondary {
@@ -131,9 +121,13 @@
       background: white;
       display: grid;
       place-items: center;
-      font-size: 1.8rem;
       box-shadow: 0 25px 50px rgba(0,0,0,.18);
       animation: float 6s ease-in-out infinite;
+    }
+
+    .float svg {
+      width: 28px;
+      height: 28px;
     }
 
     .f1 { top: 10%; left: -20px; animation-delay: 0s; }
@@ -151,9 +145,8 @@
     .mock {
       background: white;
       border-radius: 22px;
-      padding: 1.2rem;
+      padding: 1rem;
       box-shadow: 0 40px 80px rgba(0,0,0,.18);
-      animation: fadeUp .8s ease forwards;
     }
 
     .mock-header {
@@ -170,71 +163,17 @@
     }
 
     .mock-body {
-      height: 240px;
+      height: 260px;
       border-radius: 14px;
       background:
-        linear-gradient(90deg,#eef2ff 30%,#f8fafc 30%),
+        linear-gradient(90deg,#eef2ff 28%,#f8fafc 28%),
         repeating-linear-gradient(
           to bottom,
           transparent,
-          transparent 38px,
-          rgba(0,0,0,.04) 38px,
-          rgba(0,0,0,.04) 40px
+          transparent 36px,
+          rgba(0,0,0,.05) 36px,
+          rgba(0,0,0,.05) 38px
         );
-    }
-
-    @keyframes fadeUp {
-      from { opacity: 0; transform: translateY(30px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    /* TRUST */
-    .trust {
-      text-align: center;
-      margin-bottom: 3rem;
-      color: var(--muted);
-      font-weight: 600;
-    }
-
-    .platforms {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 1rem;
-      margin-top: 1.5rem;
-    }
-
-    .platform {
-      background: white;
-      padding: .8rem;
-      border-radius: 14px;
-      box-shadow: 0 20px 40px rgba(0,0,0,.08);
-      font-weight: 600;
-    }
-
-    /* STATS */
-    .stats {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 1.5rem;
-      margin-bottom: 5rem;
-    }
-
-    .stat {
-      background: white;
-      border-radius: 18px;
-      padding: 2rem;
-      text-align: center;
-      box-shadow: 0 30px 60px rgba(0,0,0,.1);
-    }
-
-    .stat h2 {
-      font-size: 2.2rem;
-      margin: 0;
-    }
-
-    .stat p {
-      color: var(--muted);
-      margin-top: .4rem;
     }
 
     @media (max-width: 900px) {
@@ -263,10 +202,26 @@
     </header>
 
     <section class="hero">
-      <div class="float f1">🎵</div>
-      <div class="float f2">📸</div>
-      <div class="float f3">▶️</div>
-      <div class="float f4">📊</div>
+      <!-- Floating SVG icons -->
+      <div class="float f1">
+        <!-- TikTok -->
+        <svg viewBox="0 0 24 24" fill="#000"><path d="M12 2v12.3a2.7 2.7 0 1 1-2-2.6V9a5 5 0 1 0 5 5V8.5a6.5 6.5 0 0 0 4 1.3V6.5A4.5 4.5 0 0 1 12 2z"/></svg>
+      </div>
+
+      <div class="float f2">
+        <!-- Instagram -->
+        <svg viewBox="0 0 24 24" fill="#E1306C"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm5 5a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm6.5-.9a1.1 1.1 0 1 0 0 2.2 1.1 1.1 0 0 0 0-2.2z"/></svg>
+      </div>
+
+      <div class="float f3">
+        <!-- YouTube -->
+        <svg viewBox="0 0 24 24" fill="#FF0000"><path d="M23 7.5a3 3 0 0 0-2.1-2.1C19 5 12 5 12 5s-7 0-8.9.4A3 3 0 0 0 1 7.5v9a3 3 0 0 0 2.1 2.1C5 19 12 19 12 19s7 0 8.9-.4a3 3 0 0 0 2.1-2.1v-9zM10 15V9l5 3-5 3z"/></svg>
+      </div>
+
+      <div class="float f4">
+        <!-- Analytics -->
+        <svg viewBox="0 0 24 24" fill="#22c55e"><path d="M3 3h2v18H3V3zm8 6h2v12h-2V9zm8-4h2v16h-2V5z"/></svg>
+      </div>
 
       <div>
         <h1>Plan. Post. <span>Grow at Scale</span></h1>
@@ -275,6 +230,7 @@
           Schedule, manage, and analyze all your short-form videos
           in one powerful dashboard.
         </p>
+
         <div class="hero-actions">
           <a href="/signup.html" class="cta">Get started for free</a>
           <a href="#" class="secondary">Watch how it works</a>
@@ -288,33 +244,6 @@
           <div class="dot"></div>
         </div>
         <div class="mock-body"></div>
-      </div>
-    </section>
-
-    <div class="trust">
-      Trusted by short-form creators around the world
-      <div class="platforms">
-        <div class="platform">Instagram</div>
-        <div class="platform">TikTok</div>
-        <div class="platform">YouTube Shorts</div>
-        <div class="platform">LinkedIn</div>
-        <div class="platform">Pinterest</div>
-        <div class="platform">Twitter / X</div>
-      </div>
-    </div>
-
-    <section class="stats">
-      <div class="stat">
-        <h2>191,782</h2>
-        <p>Creators growing</p>
-      </div>
-      <div class="stat">
-        <h2>8,587,229</h2>
-        <p>Posts viralized last month</p>
-      </div>
-      <div class="stat">
-        <h2>3,524</h2>
-        <p>Platforms supported</p>
       </div>
     </section>
   </div>
